Added a print feature in medical certificate and clearance.

--- a/app/templates/doctor/patient/add_certificate.html
+++ b/app/templates/doctor/patient/add_certificate.html
@@ -755,7 +755,7 @@
     
                         <div id="toggleContent7" style="display: none;">
                             <div class="med-header history">MEDICAL CERTIFICATE</div>
-                            <textarea class="clearance_textarea" name="certificate_textarea" rows="2" placeholder="Enter the medical certificate"></textarea>
+                            <textarea class="clearance_textarea" name="certificate_textarea" rows="2" placeholder="Enter the results from the examination for the certificate"></textarea>
                         </div>
     
                     </div>
