--- a/app/templates/doctor/patient/add_clearance.html
+++ b/app/templates/doctor/patient/add_clearance.html
@@ -747,15 +747,15 @@
                                 <textarea class="complaints" name="reasons" rows="2" placeholder="Specify any procedures, activities, or events for which the clearance is needed"></textarea>
                             </div>
     
-                            <div class="med-header clearance">ASSESSMENT & RECOMMENDATIONS</div>
+                            <div class="med-header clearance">RECOMMENDATIONS</div>
                             <div class="p_row vitalRowF">
-                                <textarea class="complaints" name="recommendations" rows="2" placeholder="Provide an assessment of the patient's fitness for the requested activity"></textarea>
+                                <textarea class="complaints" name="recommendations" rows="2" placeholder="Provide recommendations to the patient based on your assessments"></textarea>
                             </div>
                         </div>
     
                         <div id="toggleContent7" style="display: none;">
                             <div class="med-header history">MEDICAL CLEARANCE</div>
-                            <textarea class="clearance_textarea" name="clearance_textarea" rows="2" placeholder="Enter the medical clearance"></textarea>
+                            <textarea class="clearance_textarea" name="clearance_textarea" rows="2" placeholder="Enter the results from the examination for the clearance"></textarea>
                         </div>
     
                     </div>
