--- a/app/templates/doctor/patient/consultation.html
+++ b/app/templates/doctor/patient/consultation.html
@@ -88,7 +88,7 @@
                 </li>
             </ul>
 
-            <div class="add-icon" id="addAssessmentIcon" onclick="displayModal()">
+            <div class="add-icon patient" id="addAssessmentIcon" onclick="displayModal()">
                 <img src="{{ url_for('static', filename='images/Add Icon.png') }}">
             </div>
         </div>
