--- a/app/templates/doctor/patient/lab_results.html
+++ b/app/templates/doctor/patient/lab_results.html
@@ -91,7 +91,7 @@
             </ul>
 
             <a href="{{ url_for('doctor.labtest_request', patient_id=patient_id) }}">
-                <div class="add-icon">
+                <div class="add-icon patient">
                     <img src="{{ url_for('static', filename='images/Add Icon.png') }}">
                 </div>
             </a>
