--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -46,17 +46,20 @@
 
     <!-- DASHBOARD -->
     <main>
-        <div class="doctor-bg">
-            <img src="{{ url_for('static', filename='images/DocCare BG.png') }}">
-            <div class="greetings-name">
-                <p>Welcome,</p>
-                <h2>{{ info[0] }}</h2>
+
+        <center>
+            <div class="doctor-bg">
+                <img src="{{ url_for('static', filename='images/DocCare BG.png') }}">
+                <div class="greetings-name">
+                    <p>Welcome,</p>
+                    <h2>{{ info[0] }}</h2>
+                </div>
+                <div class="greetings">
+                    <p>Have a nice day at work!</p>
+                </div>
+                <p class="date-time" id="demo"></p>
             </div>
-            <div class="greetings">
-                <p>Have a nice day at work!</p>
-            </div>
-            <p class="date-time" id="demo"></p>
-        </div>
+        </center>
 
         <div class="grid_container">
             <!-- LOGS -->
