--- a/app/templates/admin/user_management/user_management.html
+++ b/app/templates/admin/user_management/user_management.html
@@ -50,70 +50,75 @@
             <div class="user-header">
                 <p>USERS</p>
             </div>
+
+            <a href="{{ url_for('admin.add_user') }}">
+                <div class="add-icon">
+                    <img src="{{ url_for('static', filename='images/Add Icon.png') }}">
+                </div>
+            </a>
         </div>
-        
-        <center>
-            <div class="user-table">
-                <table id="userTable" class="table table-striped" style="width:100%">
-                    <thead>
-                        <tr>
-                            <th>USERNAME</th>
-                            <th>FIRST NAME</th>
-                            <th>MIDDLE NAME</th>
-                            <th>LAST NAME</th>
-                            <th>EMAIL</th>
-                            <th>GENDER</th>
-                            <th>USER ROLE</th>
-                            <th>ACTION</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for user in users %}
-                            <tr>
-                                <td>{{ user.username }}</td>
-                                <td>{{ user.first_name }}</td>
-                                <td>{{ user.middle_name }}</td>
-                                <td>{{ user.last_name }}</td>
-                                <td>{{ user.email }}</td>
-                                <td>{{ user.gender }}</td>
-                                <td>{{ user.user_role }}</td>
-                                <td>
-                                    <div class="action-icon-container">
-                                        <!-- VIEW INFO -->
-                                        <form method="GET" action="/admin/user_info/">
-                                            <input type="hidden" name="csrf_token" value = "{{ csrf_token() }}">
-                                            <div class="delete-icon">
-                                                <input id="user_id" name="user_id" value="{{ user['id'] }}" type="hidden">
-                                                <button type="submit" style="background: none; border: none;">
-                                                    <img src="{{ url_for('static', filename='images/Folder.png') }}" title="User Info">
-                                                </button>
+
+        <div class="grid_container user">
+            <div class="grid_item">
+                <center>
+                    <div class="user-table">
+                        <table id="userTable" class="table table-striped" style="width:100%">
+                            <thead>
+                                <tr>
+                                    <th>USERNAME</th>
+                                    <th>FIRST NAME</th>
+                                    <th>MIDDLE NAME</th>
+                                    <th>LAST NAME</th>
+                                    <th>EMAIL</th>
+                                    <th>GENDER</th>
+                                    <th>USER ROLE</th>
+                                    <th>ACTION</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for user in users %}
+                                    <tr>
+                                        <td>{{ user.username }}</td>
+                                        <td>{{ user.first_name }}</td>
+                                        <td>{{ user.middle_name }}</td>
+                                        <td>{{ user.last_name }}</td>
+                                        <td>{{ user.email }}</td>
+                                        <td>{{ user.gender }}</td>
+                                        <td>{{ user.user_role }}</td>
+                                        <td>
+                                            <div class="action-icon-container">
+                                                <!-- VIEW INFO -->
+                                                <form method="GET" action="/admin/user_info/">
+                                                    <input type="hidden" name="csrf_token" value = "{{ csrf_token() }}">
+                                                    <div class="delete-icon">
+                                                        <input id="user_id" name="user_id" value="{{ user['id'] }}" type="hidden">
+                                                        <button type="submit" style="background: none; border: none;">
+                                                            <img src="{{ url_for('static', filename='images/Folder.png') }}" title="User Info">
+                                                        </button>
+                                                    </div>
+                                                </form>
+                    
+                                                <!-- DELETE INFO-->
+                                                <form id="deleteForm_{{ user.id }}" method="POST" action="{{ url_for('admin.delete_user') }}">
+                                                    <input type="hidden" name="csrf_token" value = "{{ csrf_token() }}" />
+                                                        <div class="delete-icon">
+                                                        <input id="user_id" name="user_id" value="{{ user.id }}" type="hidden">
+                                                        <button type="button" onclick="confirmation('{{ user.id }}')" style="background: none; border: none;">
+                                                            <img src="{{ url_for('static', filename='images/Delete.png') }}" title="Delete Record">
+                                                        </button>
+                                                    </div>
+                                                </form>
                                             </div>
-                                        </form>
-            
-                                        <!-- DELETE INFO-->
-                                        <form id="deleteForm_{{ user.id }}" method="POST" action="{{ url_for('admin.delete_user') }}">
-                                            <input type="hidden" name="csrf_token" value = "{{ csrf_token() }}" />
-                                                <div class="delete-icon">
-                                                <input id="user_id" name="user_id" value="{{ user.id }}" type="hidden">
-                                                <button type="button" onclick="confirmation('{{ user.id }}')" style="background: none; border: none;">
-                                                    <img src="{{ url_for('static', filename='images/Delete.png') }}" title="Delete Record">
-                                                </button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </td>
-                            </tr>   
-                        {% endfor %}
-                    </tbody>
-                </table>
+                                        </td>
+                                    </tr>   
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </center>
             </div>
-        </center>
-        
-        <a href="{{ url_for('admin.add_user') }}">
-            <div class="add-icon">
-                <img src="{{ url_for('static', filename='images/Add Icon.png') }}">
-            </div>
-        </a>
+        </div>
+
     </main>
 
     <!-- Confirmation Modal -->
