--- a/app/templates/doctor/patient/certificate.html
+++ b/app/templates/doctor/patient/certificate.html
@@ -79,10 +79,12 @@
                         <a class="nav-link active" aria-current="page">MEDICAL CERTIFICATE</a>
                     </li>
 
-                    <button class="print-icon" onclick="window.print()" id="printButton">
+                    <button class="print-icon" onclick="printSection()" type="button" id="printButton">
                         <img src="{{ url_for('static', filename='images/Print.png') }}">
                     </button>
+
                     <img class="update-icon" onclick="enableEdit()" id="editIcon" src="{{ url_for('static', filename='images/Edit-icon.png') }}">
+                    
                     <div class="btn-container">
                         <button class="btn-submit add-edit clearance" type="submit" id="submitData">SUBMIT</button>
                     </div>
@@ -763,10 +765,10 @@
                                 <textarea class="complaints" name="recommendations" rows="2" placeholder="Provide an assessment of the patient's fitness for the requested activity">{{ certificate[4] }}</textarea>
                             </div>
                         </div>
-    
-                        <div id="toggleContent7" style="display: none;">
+                        
+                        <div id="toggleContent7">
                             <div class="med-header history">MEDICAL CERTIFICATE</div>
-                            <textarea class="clearance_textarea" name="certificate_textarea" rows="2" placeholder="Enter medical certificate">{{ certificate[15] }}</textarea>  
+                            <textarea id="sectionToPrint" class="clearance_textarea" name="certificate_textarea" rows="2" placeholder="Enter the results from the examination for the certificate">{{ certificate[15] }}</textarea>  
                         </div>
     
                     </div>
@@ -797,7 +799,6 @@
                     </div>
                 </div>
             </div>
-            
         </main>
     </form>
 
@@ -882,6 +883,7 @@
             }
         }
 
+        // TOGGLE OPTIONS
         const optionToggles = document.querySelectorAll('[id^="option"]');
         const toggleContents = document.querySelectorAll('[id^="toggleContent"]');
 
@@ -966,6 +968,7 @@
             editIcon.setAttribute('onclick', 'enableEdit()');
         }
 
+        // DISABLE INPUTS
         function disableInputsAndTextarea() {
             const form = document.getElementById('certificateForm');
             const inputs = form.querySelectorAll('input, textarea');
@@ -973,6 +976,83 @@
             inputs.forEach((input) => {
                 input.disabled = true;
             });
+        }
+
+        // TO PRINT CERTIFICATION
+        function printSection() {
+            var section = document.getElementById('sectionToPrint');
+        
+            if (section) {
+                var currentDate = new Date().toLocaleDateString('en-US', {
+                    year: 'numeric',
+                    month: 'long',
+                    day: 'numeric'
+                });
+
+                var printWindow = window.open('about:blank', '_blank', 'width=800,height=600,toolbar=0,menubar=0'); 
+                
+                var printableContent = `
+                    <html>
+                    <head>
+                        <title>MEDICAL CERTIFICATE</title>
+                        <style>
+                            body {
+                                font-family: 'Times New Roman', Times, serif;
+                                text-align: justify;
+                                margin-top: 25px
+                                font-size: 14px;
+                            }
+                            
+                            .clearance_textarea {
+                                width: 100%;
+                            }
+
+                            h3 {
+                                text-align: center;
+                                margin-bottom: 40px;
+                            }
+
+                            .cms_logo {
+                                display: flex;
+                                text-align: center;
+                                justify-content: center;
+                            }
+
+                            .care {
+                                color: #0277BD;
+                            }
+                        </style>
+                    </head>
+                    <body>
+                        <center>
+                            <div class="cms_logo">
+                                <h4 class="doc">Doc</h4>
+                                <h4 class="care">Care</h4>
+                            </div>
+                        </center>
+                       
+                        <p style="text-align: right; margin-bottom: 40px;">Date: ${currentDate}</p>
+                        <h3> MEDICAL CERTIFICATE </h3>
+                        <p style="text-align: left; margin-bottom: 20px;">To whom it may concern,</p>
+                        <p>
+                            This is to certify that Mr./Mrs./Ms. <strong>{{ profile[1] }} {{ profile[2] }} {{ profile[3] }}</strong>, {{ profile[4] }}, {{ profile[6] }}. A resident of
+                            {{ profile[10] }} has been examined by the undersigned and found him/her ${section.innerHTML}.
+
+                            <br><br><br>This certification is being issued upon request by the interested party for: {{ certificate[3] }}
+                        </p>
+
+                        <p style="margin-top:80px; text-align: right;"><strong>DR. {{ info[0] }} {{ info[1] }}</strong><br>PHYSICIAN</p>
+                    </body>
+                    </html>
+                `;
+
+                printWindow.document.write(printableContent);
+                printWindow.print();
+                printWindow.close(); 
+
+            } else {
+                console.error('Section not found.');
+            }
         }
     </script>
 
