--- a/app/templates/medtech/dashboard.html
+++ b/app/templates/medtech/dashboard.html
@@ -51,17 +51,20 @@
     </div>
 
     <main>
-        <!-- DASHBOARD -->
-        <div class="doctor-bg">
-            <img src="{{ url_for('static', filename='images/DocCare BG.png') }}">
-            <div class="greetings-name">
-                <p>Welcome,</p>
-                <h2>{{ info[0] }}</h2>
+
+        <center>
+            <!-- DASHBOARD -->
+            <div class="doctor-bg">
+                <img src="{{ url_for('static', filename='images/DocCare BG.png') }}">
+                <div class="greetings-name">
+                    <p>Welcome,</p>
+                    <h2>{{ info[0] }}</h2>
+                </div>
+                <div class="greetings">
+                    <p>Have a nice day at work!</p>
+                </div>
             </div>
-            <div class="greetings">
-                <p>Have a nice day at work!</p>
-            </div>
-        </div>
+        </center>
 
         <div class="grid_container">
             <div class="grid_item">
