Dashboard modifications done!

--- a/app/templates/receptionist/dashboard/dashboard.html
+++ b/app/templates/receptionist/dashboard/dashboard.html
@@ -102,7 +102,7 @@
                                                 <td> {{ sched_today.date_appointment }} {{sched_today.time_appointment}}</td>
                                                 <td>{{ sched_today.first_name }} {{ sched_today.middle_name }} {{ sched_today.last_name }}</td>
                                                 <td> 
-                                                    <div class="status-cell">
+                                                    <div class="status_short">
                                                         <p class="status">
                                                             <strong> {{ sched_today.status_ }} </strong>
                                                         </p>
