--- a/app/static/receptionist_add_v2_style.css
+++ b/app/static/receptionist_add_v2_style.css
@@ -39,14 +39,15 @@ body {
 .doccare-edit-container form .doccare-appoinment-details {
     margin-top: 30px;
 }
+
 .doccare-edit-container form .title {
     display: block;
-    font-size: 32px;
+    font-size: 32px;    
     font-weight: 600;
     text-align: center; /* Center the contents within the form */
     margin: 0 auto 28px; /* Center the title horizontally */
-    color: #333;
-}z
+    color:#333;
+}
 
 .doccare-edit-container form .fields {
     display: flex;
