--- a/app/templates/doctor/appointment/appointment.html
+++ b/app/templates/doctor/appointment/appointment.html
@@ -7,8 +7,14 @@
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
         </div>
         <ul>
-            <li class="notifications">
-                <img src="{{ url_for('static', filename='images/Notification.png') }}"> 
+            <li>
+                <div class="icon" onclick="toggleNotifi()">
+                    <span></span>
+                    <img src="{{ url_for('static', filename='images/Notification.png') }}"> 
+                </div>
+                <div class="notifi-box" id="box">
+                    <h2>Notifications <span></span></h2>
+                </div>
             </li>
             <a href="{{ url_for('doctor.dashboard') }}">
                 <li class="icon-bg">
@@ -393,5 +399,41 @@
             </div>
         </body>
     </div>
+
+    <script>
+        // NOTIFICATION
+        var box  = document.getElementById('box');
+        var down = false;
+
+        function toggleNotifi(){
+            if (down) {
+                box.style.height  = '0px';
+                box.style.opacity = 0;
+                down = false;
+            } else {
+                box.style.height  = '360px';
+                box.style.opacity = 1;
+                down = true;
+            }
+        }
+
+        function setupSocketIO() {
+            var socket = io.connect('http://' + document.domain + ':' + location.port);
+            socket.on('connect', function() {
+                console.log('SocketIO connected!');
+            });
+
+            socket.on('new_lab_report_notification', function(data) {
+                console.log('Notification data');
+            
+                alert('Laboratory report has been sent!');
+                window.location.reload(); 
+            });
+        }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            setupSocketIO();
+        });
+    </script>
 
 {% endblock %}
