--- a/app/static/medtech_style.css
+++ b/app/static/medtech_style.css
@@ -80,7 +80,7 @@
 .notification-container {
     position: relative;  
     width: 100%;
-    height: 360px; 
+    height: 310px; 
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -96,6 +96,8 @@
 
 .notification-container::-webkit-scrollbar-track {
     background-color: none; 
+    background-color: var(--blueC);
+    border-radius: 5px;
 }
 
 .request-header {
