--- a/app/templates/doctor/schedule/schedule_view.html
+++ b/app/templates/doctor/schedule/schedule_view.html
@@ -45,4 +45,39 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="{{ url_for('static', filename="doctor_schedule_view_script.js") }}"></script>
+<script>
+    // NOTIFICATION
+    var box  = document.getElementById('box');
+    var down = false;
+
+    function toggleNotifi(){
+        if (down) {
+            box.style.height  = '0px';
+            box.style.opacity = 0;
+            down = false;
+        } else {
+            box.style.height  = '360px';
+            box.style.opacity = 1;
+            down = true;
+        }
+    }
+
+    function setupSocketIO() {
+        var socket = io.connect('http://' + document.domain + ':' + location.port);
+        socket.on('connect', function() {
+            console.log('SocketIO connected!');
+        });
+
+        socket.on('new_lab_report_notification', function(data) {
+            console.log('Notification data');
+        
+            alert('Laboratory report has been sent!');
+            window.location.reload(); 
+        });
+    }
+
+    document.addEventListener('DOMContentLoaded', function() {
+        setupSocketIO();
+    });
+</script>
 {% endblock %}
