Added notification feature.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="csrf-token" content="{{ csrf_token() }}">
     <title>{% block title %}DocCare{% endblock title %}</title>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='/images/DocCare favicon.ico') }}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.socket.io/4.3.2/socket.io.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,6 +50,5 @@
     
     <script> var logoutUrl = "{{ url_for('admin.logout') }}";</script>
     <script src="{{ url_for('static', filename='logout.js') }}"></script>
-
 </body>
 </html>
