--- a/app/templates/doctor/patient/labtest_request.html
+++ b/app/templates/doctor/patient/labtest_request.html
@@ -95,6 +95,12 @@
                 <input hidden name="patient_id" value="{{ patient[0] }}">
             </div>
 
+            <!-- DOCTOR ID -->
+            <div class="inputBox code" style="display: none;">
+                <input disabled name="doctor_id" value="{{ doctor[3] }}">
+                <input hidden name="doctor_id" value="{{ doctor[3] }}">
+            </div>
+
             <center>
                 <!-- REQUEST FOR LABORATORY TEST -->
                 <div class="patient-bg request">
