--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -763,7 +763,7 @@ textarea::-webkit-scrollbar-track {
 .notifi-box {
     z-index: 999;
 	position: absolute;
-	width: 300px;
+	width: 380px;
 	height: 0px;
 	opacity: 0;
 	top: 60px;
@@ -771,6 +771,19 @@ textarea::-webkit-scrollbar-track {
     background-color: white;
 	transition: 0.5s opacity, 200ms height;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    overflow-y: scroll;
+}
+
+.notifi-box::-webkit-scrollbar {
+    width: 10px; 
+}
+
+.notifi-box::-webkit-scrollbar-thumb {
+    background-color: var(--blueB); 
+}
+
+.notifi-box::-webkit-scrollbar-track {
+    background-color: var(--blueC); 
 }
 
 .notifi-box h2 {
@@ -783,7 +796,7 @@ textarea::-webkit-scrollbar-track {
 .notifi-box h2 span {
 	color: var(--blueD);
 }
-
+/* 
 .notifi-item {
 	display: flex;
 	border-bottom: 1px solid #eee;
@@ -801,4 +814,4 @@ textarea::-webkit-scrollbar-track {
 	width: 50px;
 	margin-right: 10px;
 	border-radius: 50%;
-}
+} */
