--- a/app/templates/medtech/laboratory_test.html
+++ b/app/templates/medtech/laboratory_test.html
@@ -38,7 +38,7 @@
                 </li>
             </a>
         </ul>
-        <div class="foot-nav">
+        <!-- <div class="foot-nav">
             <div class="sidenav-user-bg">
                 <img src="{{ url_for('static', filename='images/Edward.png') }}" class="user-img">
                 <div>
@@ -52,7 +52,7 @@
                     <p>Logout</p>
                 </li>
             </ul>
-        </div>
+        </div> -->
     </div>
 
     <main>
@@ -82,6 +82,12 @@
                 <input disabled name="patient_id" value="{{ labreq[1] }}">
                 <input hidden name="patient_id" value="{{ labreq[1] }}">
             </div>
+
+            <!-- DOCTOR ID -->
+            <div class="inputBox code" style="display: none;">
+                <input disabled name="doctor_id" value="{{ labreq[2] }}">
+                <input hidden name="doctor_id" value="{{ labreq[2] }}">
+            </div>
     
             <center>
                 <!-- LABORATORY TEST -->
@@ -93,14 +99,15 @@
                             
                             <div class="p_row rowOne">
                                 <div class="inputBox labsubject">
-                                    <input type="text" name="labsubject" value="{{ labreq[3] }}" disabled>
+                                    <input type="text" name="labsubject" value="{{ labreq[4] }}" disabled>
                                     <span>TESTING PURPOSE</span>
                                 </div>
                             </div>
             
                             <div class="p_row rowTwo">
                                 <div class="inputBox fullName">
-                                    <input type="text" name="fullName" value="{{ labreq[2] }}" disabled>
+                                    <input type="text" value="{{ labreq[3] }}" disabled>
+                                    <input hidden type="text" name="fullName" value="{{ labreq[3] }}">
                                     <span>PATIENT NAME</span>
                                 </div>
                             </div>
@@ -109,21 +116,21 @@
                                 <div class="inputBox gender">
                                     <select class="gender" name="gender" disabled>
                                         <option value="" disabled selected></option>
-                                        <option value="FEMALE" {% if labreq[4] == "FEMALE" %} selected {% endif %}>FEMALE</option>
-                                        <option value="MALE" {% if labreq[4] == "MALE" %} selected {% endif %}>MALE</option>
+                                        <option value="FEMALE" {% if labreq[5] == "FEMALE" %} selected {% endif %}>FEMALE</option>
+                                        <option value="MALE" {% if labreq[5] == "MALE" %} selected {% endif %}>MALE</option>
                                     </select>
                                     <span>GENDER</span>
                                 </div>
                                 <div class="inputBox age">
-                                    <input type="text" name="age" value="{{ labreq[5] }}" disabled>
+                                    <input type="text" name="age" value="{{ labreq[6] }}" disabled>
                                     <span>AGE</span>
                                 </div>
                                 <div class="inputBox doctorName">
-                                    <input type="text" name="doctorName"  value="{{ labreq[6] }}" disabled>
+                                    <input type="text" name="doctorName"  value="{{ labreq[7] }}" disabled>
                                     <span>DOCTOR</span>
                                 </div>
                                 <div class="inputBox dateofRequest">
-                                    <input type="text" name="dateofRequest" id="dateofRequest" value="{{ labreq[7] }}" disabled> 
+                                    <input type="text" name="dateofRequest" id="dateofRequest" value="{{ labreq[8] }}" disabled> 
                                     <span>DATE OF REQUEST</span>
                                 </div>
                             </div>
@@ -704,24 +711,6 @@
                 down = true;
             }
         }
-
-        function setupSocketIO() {
-            var socket = io.connect('http://' + document.domain + ':' + location.port);
-            socket.on('connect', function() {
-                console.log('SocketIO connected!');
-            });
-
-            socket.on('new_lab_request_notification', function(data) {
-                console.log('Notification data');
-            
-                alert('New laboratory request has been made!');
-                window.location.reload(); 
-            });
-        }
-
-        document.addEventListener('DOMContentLoaded', function() {
-            setupSocketIO();
-        });
     </script>
 
 {% endblock %}
