--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -723,95 +723,49 @@ textarea::-webkit-scrollbar-track {
 }
 
 /* ------------------------------------------- NOTIFICATIONS ------------------------------------------- */
-.icon {
-	cursor: pointer;
-	margin-left: 4px;
-    margin-bottom: 20px;
-    width: 85%;  
-    height: 50px;   
-    background-color: rgb(198, 233, 254);
-    border-radius: 100%; 
+#toast-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
 }
 
-.icon span {
-    position: absolute;
-	background: var(--blueD);
-	padding: 5px;
-    font-size: 10px;
-	border-radius: 50%;
-	color: #fff;
-    margin-left: 40px;
+.toast {
+    max-width: 350px;
+    height: 120px;
+    width: 100%;
+    background-color: #333;
+    color: #fff;
+    border-radius: 5px;
+    margin-bottom: 10px; 
+    display: none;
 }
 
-.icon img {
-	width: 25px;
-	margin-top: 15px;
-    margin-left: 15px;
+.toast.show {
+    display: block;
 }
 
-.icon:hover {
-	opacity: .7;
+.toast-header {
+    padding: 10px;
+    border-bottom: 1px solid #555; 
+    color: var(--blueA);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 5px;
 }
 
-.logo {
-	flex: 1;
-	margin-left: 50px;
-	color: #eee;
-	font-size: 20px;
+.mr-auto:hover {
+    color: var(--blueD);
 }
 
-.notifi-box {
-    z-index: 999;
-	position: absolute;
-	width: 380px;
-	height: 0px;
-	opacity: 0;
-	top: 60px;
-	left: 90px;
-    background-color: white;
-	transition: 0.5s opacity, 200ms height;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    overflow-y: scroll;
+.toast-body {
+    padding: 10px;
 }
 
-.notifi-box::-webkit-scrollbar {
-    width: 10px; 
+.close-btn {
+    background: none;
+    border: none;
+    color: #fff;
+    cursor: pointer;
 }
-
-.notifi-box::-webkit-scrollbar-thumb {
-    background-color: var(--blueB); 
-}
-
-.notifi-box::-webkit-scrollbar-track {
-    background-color: var(--blueC); 
-}
-
-.notifi-box h2 {
-	font-size: 14px;
-	padding: 10px;
-	border-bottom: 1px solid #eee;
-	color: #999;
-}
-
-.notifi-box h2 span {
-	color: var(--blueD);
-}
-/* 
-.notifi-item {
-	display: flex;
-	border-bottom: 1px solid #eee;
-	padding: 15px 5px;
-	margin-bottom: 15px;
-	cursor: pointer;
-}
-
-.notifi-item:hover {
-	background-color: #eee;
-}
-
-.notifi-item img {
-	display: block;
-	width: 50px;
-	margin-right: 10px;
-	border-radius: 50%;
-} */
