--- a/app/templates/doctor/appointment/appointment.html
+++ b/app/templates/doctor/appointment/appointment.html
@@ -7,15 +7,6 @@
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
         </div>
         <ul>
-            <li>
-                <div class="icon" onclick="toggleNotifi()">
-                    <span></span>
-                    <img src="{{ url_for('static', filename='images/Notification.png') }}"> 
-                </div>
-                <div class="notifi-box" id="box">
-                    <h2>Notifications <span></span></h2>
-                </div>
-            </li>
             <a href="{{ url_for('doctor.dashboard') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
@@ -302,6 +293,11 @@
                     <a href="{{ url_for('doctor.add_appointment') }}" class="doccare-add-appointment-icon" type="button" id="add-appointment-button">
                         <span class="material-symbols-outlined add-icon">&#xe147;</span>
                     </a>
+                    
+                    <div id="toast-container">
+        
+                    </div>
+
                     <!-- Include these script tags at the end of the body content -->
                     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -394,46 +390,53 @@
                                 }
                             });
                         });
+
+                        // NOTIFICATION
+                        var socket = io.connect('http://' + document.domain + ':' + location.port);
+
+                        socket.on('connect', function () {
+                            console.log('Connected to Socket.IO');
+                        });
+                    
+                        socket.on('send_notification_doctor', function (data) {
+                            const notificationMessage = data.message;
+                            console.log('Received notification:', notificationMessage);
+                            displayToast(notificationMessage);
+                        });
+                    
+                        function displayToast(message) {
+                        
+                            var toastContainer = document.getElementById('toast-container');
+                            var newToast = document.createElement('div');
+                            newToast.className = 'toast hide';
+                            newToast.innerHTML = `
+                                <div class="toast-header">
+                                    <strong class="mr-auto">NOTIFICATION</strong>
+                                    <button type="button" class="close-btn" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="notification-body toast-body">
+                                    ${message}
+                                </div>
+                            `;
+
+                            toastContainer.appendChild(newToast);
+                    
+                            newToast.classList.add('show');
+                    
+                            var closeButton = newToast.querySelector('.close-btn');
+                            closeButton.addEventListener('click', function () {
+                                newToast.classList.remove('show');
+                                setTimeout(function () {
+                                    newToast.remove(); 
+                                }, 500); 
+                            });
+                        }
                     </script>                    
                 </main>
             </div>
         </body>
     </div>
-
-    <script>
-        // NOTIFICATION
-        var box  = document.getElementById('box');
-        var down = false;
-
-        function toggleNotifi(){
-            if (down) {
-                box.style.height  = '0px';
-                box.style.opacity = 0;
-                down = false;
-            } else {
-                box.style.height  = '360px';
-                box.style.opacity = 1;
-                down = true;
-            }
-        }
-
-        function setupSocketIO() {
-            var socket = io.connect('http://' + document.domain + ':' + location.port);
-            socket.on('connect', function() {
-                console.log('SocketIO connected!');
-            });
-
-            socket.on('new_lab_report_notification', function(data) {
-                console.log('Notification data');
-            
-                alert('Laboratory report has been sent!');
-                window.location.reload(); 
-            });
-        }
-
-        document.addEventListener('DOMContentLoaded', function() {
-            setupSocketIO();
-        });
-    </script>
 
 {% endblock %}
