--- a/app/templates/doctor/schedule/schedule.html
+++ b/app/templates/doctor/schedule/schedule.html
@@ -7,15 +7,6 @@
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
         </div>
         <ul>
-            <li>
-                <div class="icon" onclick="toggleNotifi()">
-                    <span></span>
-                    <img src="{{ url_for('static', filename='images/Notification.png') }}"> 
-                </div>
-                <div class="notifi-box" id="box">
-                    <h2>Notifications <span></span></h2>
-                </div>
-            </li>
             <a href="{{ url_for('doctor.dashboard') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
@@ -283,39 +274,53 @@
         </body>
 </div>
 
+<div id="toast-container">
+        
+</div>
+
 <script>
     // NOTIFICATION
-    var box  = document.getElementById('box');
-    var down = false;
+    var socket = io.connect('http://' + document.domain + ':' + location.port);
 
-    function toggleNotifi(){
-        if (down) {
-            box.style.height  = '0px';
-            box.style.opacity = 0;
-            down = false;
-        } else {
-            box.style.height  = '360px';
-            box.style.opacity = 1;
-            down = true;
-        }
-    }
-
-    function setupSocketIO() {
-        var socket = io.connect('http://' + document.domain + ':' + location.port);
-        socket.on('connect', function() {
-            console.log('SocketIO connected!');
-        });
-
-        socket.on('new_lab_report_notification', function(data) {
-            console.log('Notification data');
-        
-            alert('Laboratory report has been sent!');
-            window.location.reload(); 
-        });
-    }
-
-    document.addEventListener('DOMContentLoaded', function() {
-        setupSocketIO();
+    socket.on('connect', function () {
+        console.log('Connected to Socket.IO');
     });
+
+    socket.on('send_notification_doctor', function (data) {
+        const notificationMessage = data.message;
+        console.log('Received notification:', notificationMessage);
+        displayToast(notificationMessage);
+    });
+
+    function displayToast(message) {
+       
+        var toastContainer = document.getElementById('toast-container');
+        var newToast = document.createElement('div');
+        newToast.className = 'toast hide';
+        newToast.innerHTML = `
+            <div class="toast-header">
+                <strong class="mr-auto">NOTIFICATION</strong>
+                <button type="button" class="close-btn" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="notification-body toast-body">
+                ${message}
+            </div>
+        `;
+
+        toastContainer.appendChild(newToast);
+
+        newToast.classList.add('show');
+
+        var closeButton = newToast.querySelector('.close-btn');
+        closeButton.addEventListener('click', function () {
+            newToast.classList.remove('show');
+            setTimeout(function () {
+                newToast.remove(); 
+            }, 500); 
+        });
+    }
 </script>
+
 {% endblock %}
