--- a/app/templates/medtech/dashboard.html
+++ b/app/templates/medtech/dashboard.html
@@ -11,18 +11,6 @@
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
         </div>
         <ul>
-            <li>
-                <div class="icon" onclick="toggleNotifi()">
-                    <span></span>
-                    <img src="{{ url_for('static', filename='images/Notification.png') }}"> 
-                </div>
-                <div class="notifi-box" id="box">
-                    <h2>Notifications <span></span></h2>
-                    <ul id="notification-list">
-                        <!-- Notifications will be displayed here -->
-                    </ul>
-                </div>
-            </li>
             <li class="selected-icon-bg">
                 <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
                 <p>Dashboard</p>
@@ -145,6 +133,10 @@
         
     </main>
 
+    <div id="toast-container">
+        
+    </div>
+
     <script>
         // LAB REQUEST NOTIFICATION
         const unreadMessages = document.querySelectorAll(".unread");
@@ -181,22 +173,49 @@
             });
             updateUnreadCount();
         });
+        
+        // NOTIFICATION
+        var socket = io.connect('http://' + document.domain + ':' + location.port);
 
-        var box  = document.getElementById('box');
-        var down = false;
+        socket.on('connect', function () {
+            console.log('Connected to Socket.IO');
+        });
+    
+        socket.on('send_notification_medtech', function (data) {
+            const notificationMessage = data.message;
+            console.log('Received notification:', notificationMessage);
+            displayToast(notificationMessage);
+        });
+    
+        function displayToast(message) {
+           
+            var toastContainer = document.getElementById('toast-container');
+            var newToast = document.createElement('div');
+            newToast.className = 'toast hide';
+            newToast.innerHTML = `
+                <div class="toast-header">
+                    <strong class="mr-auto">NOTIFICATION</strong>
+                    <button type="button" class="close-btn" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="notification-body toast-body">
+                    ${message}
+                </div>
+            `;
 
-        function toggleNotifi(){
-            if (down) {
-                box.style.height  = '0px';
-                box.style.opacity = 0;
-                down = false;
-            } else {
-                box.style.height  = '360px';
-                box.style.opacity = 1;
-                down = true;
-            }
+            toastContainer.appendChild(newToast);
+    
+            newToast.classList.add('show');
+    
+            var closeButton = newToast.querySelector('.close-btn');
+            closeButton.addEventListener('click', function () {
+                newToast.classList.remove('show');
+                setTimeout(function () {
+                    newToast.remove(); 
+                }, 500); 
+            });
         }
-
     </script>
 
 {% endblock %}
