--- a/app/templates/medtech/laboratory_report.html
+++ b/app/templates/medtech/laboratory_report.html
@@ -12,15 +12,6 @@
             <img src="{{ url_for('static', filename='/images/DocCare Logo.png') }}">
         </div>
         <ul>
-            <li>
-                <div class="icon" onclick="toggleNotifi()">
-                    <span></span>
-                    <img src="{{ url_for('static', filename='images/Notification.png') }}"> 
-                </div>
-                <div class="notifi-box" id="box">
-                    <h2>Notifications <span></span></h2>
-                </div>
-            </li>
             <a href="{{ url_for('medtech.dashboard') }}">
                 <li class="icon-bg">
                     <img src="{{ url_for('static', filename='images/Dashboard.png') }}"> 
@@ -82,14 +73,14 @@
                         
                         <div class="p_row rowOne">
                             <div class="inputBox labsubject">
-                                <input type="text" name="labsubject" value="{{ labreq[3] }}" disabled>
+                                <input type="text" name="labsubject" value="{{ labreq[4] }}" disabled>
                                 <span>TESTING PURPOSE</span>
                             </div>
                         </div>
             
                         <div class="p_row rowTwo">
                             <div class="inputBox fullName">
-                                <input type="text" name="fullName" value="{{ labreq[2] }}" disabled>
+                                <input type="text" name="fullName" value="{{ labreq[3] }}" disabled>
                                 <span>PATIENT NAME</span>
                             </div>
                         </div>
@@ -98,21 +89,21 @@
                             <div class="inputBox gender">
                                 <select class="gender" name="gender" disabled>
                                     <option value="" disabled selected></option>
-                                    <option value="FEMALE" {% if labreq[4] == "FEMALE" %} selected {% endif %}>FEMALE</option>
-                                    <option value="MALE" {% if labreq[4] == "MALE" %} selected {% endif %}>MALE</option>
+                                    <option value="FEMALE" {% if labreq[5] == "FEMALE" %} selected {% endif %}>FEMALE</option>
+                                    <option value="MALE" {% if labreq[5] == "MALE" %} selected {% endif %}>MALE</option>
                                 </select>
                                 <span>GENDER</span>
                             </div>
                             <div class="inputBox age">
-                                <input type="text" name="age" value="{{ labreq[5] }}" disabled>
+                                <input type="text" name="age" value="{{ labreq[6] }}" disabled>
                                 <span>AGE</span>
                             </div>
                             <div class="inputBox doctorName">
-                                <input type="text" name="doctorName"  value="{{ labreq[6] }}" disabled>
+                                <input type="text" name="doctorName"  value="{{ labreq[7] }}" disabled>
                                 <span>DOCTOR</span>
                             </div>
                             <div class="inputBox dateofRequest">
-                                <input type="text" name="dateofRequest" id="dateofRequest" value="{{ labreq[7] }}" disabled> 
+                                <input type="text" name="dateofRequest" id="dateofRequest" value="{{ labreq[8] }}" disabled> 
                                 <span>DATE OF REQUEST</span>
                             </div>
                         </div>
@@ -583,7 +574,7 @@
             
                             <center>
                                 <div class="inputBox longtext">
-                                    <input type="text" name="others" value="{{ labreq[8] }}" disabled>
+                                    <input type="text" name="others" value="{{ labreq[9] }}" disabled>
                                     <span>OTHERS <em>(specify)</em></span>
                                 </div>
                             </center>
@@ -629,6 +620,10 @@
         </form>
     </main>
 
+    <div id="toast-container">
+        
+    </div>
+
     <script>
         // VIEW LABORATORY JOB ORDER
         const toggleButton = document.getElementById('toggleButton');
@@ -642,38 +637,48 @@
             }
         });
 
-        var box  = document.getElementById('box');
-        var down = false;
+        // NOTIFICATION
+        var socket = io.connect('http://' + document.domain + ':' + location.port);
 
-        function toggleNotifi(){
-            if (down) {
-                box.style.height  = '0px';
-                box.style.opacity = 0;
-                down = false;
-            } else {
-                box.style.height  = '360px';
-                box.style.opacity = 1;
-                down = true;
-            }
-        }
-
-        function setupSocketIO() {
-            var socket = io.connect('http://' + document.domain + ':' + location.port);
-            socket.on('connect', function() {
-                console.log('SocketIO connected!');
-            });
-
-            socket.on('new_lab_request_notification', function(data) {
-                console.log('Notification data');
-            
-                alert('New laboratory request has been made!');
-                window.location.reload(); 
-            });
-        }
-
-        document.addEventListener('DOMContentLoaded', function() {
-            setupSocketIO();
+        socket.on('connect', function () {
+            console.log('Connected to Socket.IO');
         });
+    
+        socket.on('send_notification_medtech', function (data) {
+            const notificationMessage = data.message;
+            console.log('Received notification:', notificationMessage);
+            displayToast(notificationMessage);
+        });
+    
+        function displayToast(message) {
+           
+            var toastContainer = document.getElementById('toast-container');
+            var newToast = document.createElement('div');
+            newToast.className = 'toast hide';
+            newToast.innerHTML = `
+                <div class="toast-header">
+                    <strong class="mr-auto">NOTIFICATION</strong>
+                    <button type="button" class="close-btn" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="notification-body toast-body">
+                    ${message}
+                </div>
+            `;
+
+            toastContainer.appendChild(newToast);
+    
+            newToast.classList.add('show');
+    
+            var closeButton = newToast.querySelector('.close-btn');
+            closeButton.addEventListener('click', function () {
+                newToast.classList.remove('show');
+                setTimeout(function () {
+                    newToast.remove(); 
+                }, 500); 
+            });
+        }
     </script>
 
 {% endblock %}
